tests/specs/OptionalReturnType.txt
# mod.ts
export function foo(a: number) {
    return a;
  }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:1:1
  | 
1 | export function foo(a: number) {
  | ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> file:///mod.ts:1:1
  | 
1 | export function foo(a: number) {
  | ^

# output.txt
Defined in file:///mod.ts:1:1

function foo(a: number)


# output.json
[
  {
    "kind": "function",
    "name": "foo",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [
        {
          "kind": "identifier",
          "name": "a",
          "optional": false,
          "tsType": {
            "repr": "number",
            "kind": "keyword",
            "keyword": "number"
          }
        }
      ],
      "returnType": null,
      "hasBody": true,
      "isAsync": false,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
